# TemporalMesh-Transformer

./: .gitignore  CONTRIBUTING.md  MODEL_CARD.md  README.md  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: index.html
tests/: test_benchmarks.py  test_config.py  test_dataset.py  test_edge_cases.py  test_forward.py  test_generation.py  test_integration.py  test_reprs.py  test_shapes.py  test_training.py
tmt/: __init__.py
tmt/data/: __init__.py  dataset.py  tokenizer.py
tmt/experiments/: 01_baseline.ipynb  02_mesh_only.ipynb  03_full_tmt.ipynb  04_compare.ipynb
tmt/model/: __init__.py  attention.py  config.py  embedding.py  exit_gate.py  ffn.py  layers.py  memory.py  mesh.py  model.py
tmt/training/: __init__.py  loss.py  scheduler.py  trainer.py
