[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "temporal-mesh-transformer"
version = "0.1.0"
description = "TemporalMesh Transformer — dynamic graph attention with temporal decay and adaptive depth routing"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "einops>=0.7.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "tokenizers>=0.19.0",
    "wandb>=0.17.0",
    "tensorboard>=2.16.0",
    "matplotlib>=3.8.0",
    "jupyter>=1.0.0",
    "pandas>=2.2.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "black>=24.0.0", "ruff>=0.4.0"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
